# IsleChat

./: .env.example  .gitignore  README.md  pyproject.toml
src/isle_chat/: __main__.py
src/isle_chat/agent/: __init__.py
src/isle_chat/agent/graph/: __init__.py  builder.py  edges.py
src/isle_chat/agent/graph/nodes/: __init__.py  memory.py  response.py  summary.py
src/isle_chat/agent/models/: __init__.py  llm.py  schemas.py
src/isle_chat/agent/skills/: __init__.py
src/isle_chat/agent/skills/memory/: __init__.py  analyzer.py  extractor.py  repository.py  service.py  types.py
src/isle_chat/agent/skills/response/: __init__.py  service.py
src/isle_chat/agent/skills/summary/: __init__.py  service.py
src/isle_chat/agent/state/: __init__.py  context.py  state.py
src/isle_chat/core/: database.py  settings.py
